--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A portal all about competitive programming and problem solving",
   "main": "index.js",
   "scripts": {
-    "run" : "node index.js",
+    "run": "node index.js",
     "test": "./node_modules/mocha/bin/mocha --recursive --reporter spec ./tests"
   },
   "repository": {
@@ -27,8 +27,11 @@
   "private": true,
   "dependencies": {
     "@forthright48/simplecss": "^1.3.0",
+    "bcryptjs": "^2.3.0",
     "express": "^4.14.0",
-    "pug": "^2.0.0-beta3"
+    "mongoose": "^4.5.10",
+    "pug": "^2.0.0-beta3",
+    "validator": "^5.5.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
