--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "@forthright48/simplecss": "^1.3.0",
     "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "mongoose": "^4.5.10",
     "pug": "^2.0.0-beta3",
     "validator": "^5.5.0"
