--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@forthright48/simplecss": "^1.3.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "mongoose": "^4.5.10",
