--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "jquery": "^3.1.0",
     "mongoose": "^4.5.10",
+    "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
     "pug": "^2.0.0-beta3",
     "validator": "^5.5.0"
   },
