--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-recaptcha": "^2.1.0",
     "express-session": "^1.14.0",
     "jquery": "^3.1.0",
     "mongoose": "^4.5.10",
