--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "express-session": "^1.14.0",
     "jquery": "^3.1.0",
     "mongoose": "^4.5.10",
+    "nodemailer": "^2.5.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
     "pug": "^2.0.0-beta3",
     "validator": "^5.5.0"
