--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "gulp-changed": "^1.3.2",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
+    "gulp-css-url-to-absolute": "^1.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-nodemon": "^2.1.0",
     "gulp-recursive-concat": "^0.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
