Add moment.js and view for recent notes

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.14.0",
     "jquery": "^3.1.0",
     "jquery-modal": "^0.7.1",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.10",
     "nodemailer": "^2.5.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
