--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.14.0",
     "express-recaptcha": "^2.1.0",
     "express-session": "^1.14.0",
+    "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
     "jquery-modal": "^0.7.1",
     "moment": "^2.14.1",
