--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
     "jquery-modal": "^0.7.1",
+    "marked": "^0.3.6",
     "moment": "^2.14.1",
     "mongoose": "^4.5.10",
     "nodemailer": "^2.5.0",
