Handle error during browserify using error signal

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-imagemin": "^3.0.3",
     "gulp-nodemon": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-recursive-concat": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
