--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
     "pug": "^2.0.0-beta3",
+    "tether": "^1.3.7",
     "validator": "^5.5.0"
   },
   "devDependencies": {
