Integrate bootstrap with views

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gulp-recursive-concat": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
