--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A portal all about competitive programming and problem solving",
   "main": "index.js",
   "scripts": {
-    "prestart": "gulp production",
-    "start": "forever start --uid \"cpps\" index.js",
+    "prestart": "node_modules/gulp/bin/gulp.js production",
+    "start": "node_modules/forever/bin/forever start --uid \"cpps\" index.js",
     "test": "./node_modules/mocha/bin/mocha --recursive --reporter spec ./tests"
   },
   "repository": {
@@ -55,6 +55,7 @@
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
     "del": "^2.2.2",
+    "forever": "^0.15.3",
     "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-changed": "^1.3.2",
