--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
     "pug": "^2.0.0-beta3",
     "tether": "^1.3.7",
-    "validator": "^5.5.0"
-  },
-  "devDependencies": {
+    "validator": "^5.5.0",
     "babel-preset-es2015": "^6.13.2",
     "babelify": "^7.3.0",
     "browser-sync": "^2.14.0",
