--- a/package.json
+++ b/package.json
@@ -28,31 +28,20 @@
   "private": true,
   "dependencies": {
     "async": "^2.0.1",
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "^7.3.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.14.0",
+    "browserify": "^13.1.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "del": "^2.2.2",
     "express": "^4.14.0",
     "express-recaptcha": "^2.1.0",
     "express-session": "^1.14.0",
     "font-awesome": "^4.6.3",
-    "jquery": "^3.1.0",
-    "jquery-validation": "^1.15.1",
-    "marked": "^0.3.6",
-    "moment": "^2.14.1",
-    "mongoose": "^4.5.10",
-    "nodemailer": "^2.5.0",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
-    "pug": "^2.0.0-beta3",
-    "tether": "^1.3.7",
-    "validator": "^5.5.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.14.0",
-    "browserify": "^13.1.0",
-    "del": "^2.2.2",
     "forever": "^0.15.3",
     "glob": "^7.0.5",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -69,6 +58,18 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
+    "jquery": "^3.1.0",
+    "jquery-validation": "^1.15.1",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
+    "moment": "^2.14.1",
+    "mongoose": "^4.5.10",
+    "nodemailer": "^2.5.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
+    "pug": "^2.0.0-beta3",
+    "tether": "^1.3.7",
+    "validator": "^5.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
