--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "validator": "^7.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "mongoose-paginate": "^5.0.3"
   }
 }
