Add pattern to PID in insert page

--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
     "validator": "^7.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.7.1"
   }
 }
