--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mongoose-paginate": "^5.0.3",
     "nodemailer": "^4.0.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemailer-sparkpost-transport": "^2.0.0",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
     "pug": "^2.0.0-beta3",
     "tether": "^1.3.7",
