--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mongoose": "^4.5.10",
     "mongoose-paginate": "^5.0.3",
     "nodemailer": "^4.0.1",
+    "nodemailer-mailgun-transport": "^1.3.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemailer-sparkpost-transport": "^2.0.0",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
