--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "nodemailer": "^4.0.1",
     "nodemailer-mailgun-transport": "^1.3.5",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
-    "ojscraper": "0.0.0",
+    "ojscraper": "^1.0.0",
     "pug": "^2.0.0-beta3",
     "tether": "^1.3.7",
     "validator": "^7.0.0",
