--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cpps",
   "version": "1.3.0",
   "description": "A portal all about competitive programming and problem solving",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "prestart": "node_modules/gulp/bin/gulp.js production",
-    "start": "node index.js",
+    "start": "node server/index.js",
     "test": "./node_modules/mocha/bin/mocha --recursive --reporter spec ./tests"
   },
   "repository": {
