Expose RESTful api for Classroom

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
   },
   "rules": {
     "new-cap": ["error", {
-      "capIsNewExceptions": ["Router"]
+      "capIsNewExceptions": ["Router", "ObjectId"]
       }],
     "require-jsdoc": "off"
   }
