--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "client/modules/coach"]
 	path = client/modules/coach
-	url = git@github.com:nuronialBlock/coach-cpps.git
+	url = https://github.com/nuronialBlock/coach-cpps.git
