--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.14.1",
     "mongoose": "^4.5.10",
     "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.9.0",
     "nodemailer": "^4.0.1",
     "nodemailer-mailgun-transport": "^1.3.5",
     "notifyjs-browser": "git+https://github.com/notifyjs/notifyjs.git",
