--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "tether": "^1.3.7",
     "validator": "^7.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
