--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "new-cap": ["error", {
       "capIsNewExceptions": ["Router", "ObjectId"]
       }],
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "max-len": "off",
   }
 }
