--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-uglify": "^2.0.0",
     "jquery": "^3.1.0",
     "jquery-validation": "^1.15.1",
+    "kue": "^0.11.6",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "moment": "^2.14.1",
