--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jquery": "^3.1.0",
     "jquery-validation": "^1.15.1",
     "kue": "^0.11.6",
+    "kue-unique": "^1.0.2",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "moment": "^2.14.1",
