--- a/client/modules/coach/package.json
+++ b/client/modules/coach/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-beta.3",
-    "codeforces-rating-system": "1.4.0",
+    "codeforces-rating-system": "^1.5.0",
     "font-awesome": "^4.7.0",
     "grunt": "^1.0.1",
     "grunt-contrib-less": "^1.4.1",
