--- a/client/modules/coach/package.json
+++ b/client/modules/coach/package.json
@@ -6,34 +6,34 @@
     "bootstrap": "4.0.0-beta.3",
     "codeforces-rating-system": "^1.5.0",
     "font-awesome": "^4.7.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.4",
     "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
     "markdown": "^0.5.0",
     "markdown-react-js": "^0.3.0",
-    "qs": "^6.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-loading-overlay": "^0.2.8",
     "react-notification-system": "^0.2.17",
     "react-notification-system-redux": "^1.2.0",
     "react-progress-button": "^5.1.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-spinkit": "^3.0.0",
-    "react-transition-group": "^1.0.0",
-    "reactstrap": "^5.0.0-alpha.4",
-    "recharts": "^1.0.0-beta.10",
+    "react-transition-group": "^1.2.1",
+    "reactstrap": "^5.0.0",
+    "recharts": "^1.6.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "eslint": "^4.15.0",
+    "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.14.2",
     "react-scripts": "1.0.12"
   },
   "scripts": {
